# habenero

./: .gitmodules  readme.md
Hotones/: CMakeLists.txt  build.ps1  build.sh  compile_commands.json  debug_paths.ps1  grabheaders.ps1  meow.yaml  shell.bat
Hotones/examples/DemoCupProject/: init.lua
Hotones/src/: PakRegistry.cpp  Player.cpp  main.cpp
Hotones/src/Assets/: AssetLoader.cpp  PackScanner.cpp
Hotones/src/GFX/: AssetPath.cpp  BuiltInScene.cpp  BuiltInScene.hpp  CollidableModel.cpp  GameScene.cpp  LightingSystem.cpp  LoadingScene.cpp  MainMenuScene.cpp  ScriptedScene.cpp  StbTextField.cpp  UIManager.cpp  bsp.cpp
Hotones/src/GFX/BuiltInGamePacks/GameScenes/OverTone/: MainMenu.cpp
Hotones/src/Headless/: NetworkManager.cpp  Server.cpp
Hotones/src/Physics/: PhysicsSystem.cpp  physics.cpp
Hotones/src/SFX/: AudioSystem.cpp  SoundBus.cpp
Hotones/src/Scripting/: CppLoader.cpp  CupLoader.cpp  CupPackage.cpp
Hotones/src/Scripting/LuaLibraries/: Lighting.cpp
Hotones/src/include/: SoundBus.hpp
Hotones/src/include/Assets/: PackScanner.hpp
Hotones/src/include/GFX/: BuiltInScene.hpp  CollidableModel.hpp  GameScene.hpp  LightingSystem.hpp  MainMenuScene.hpp  Player.hpp  SceneManager.hpp  StbTextField.hpp  UIManager.hpp
Hotones/src/include/Physics/: PhysicsSystem.hpp  geometry.h
Hotones/src/include/SFX/: AudioSystem.hpp
Hotones/src/include/Scripting/: CupLoader.hpp
Hotones/src/include/server/: NetworkManager.hpp  Packets.hpp
OverTone/: .gitignore  README.md  build.sh  compile_commands.json  meow.yaml
OverTone/src/: lib.cpp
OverTone/src/GFX/: GameScene.hpp
OverTone/src/include/: PakRegistry.hpp
OverTone/src/include/Assets/: AssetLoader.hpp
OverTone/src/include/ECS/: ComponentPool.hpp  Components.hpp  ECS.hpp  Entity.hpp  (+2 more)
assets/: Home.blend  Home.blend1
docs/lua_api/: audio.txt  globals.txt  input.txt  lighting.txt  mesh.txt  render.txt  server.txt  start.txt
(+19 files in other folders)
